--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "dev-m": "gatsby develop -H 0.0.0.0 -p 8000",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "gatsby develop",
     "serve": "gatsby serve",
@@ -19,6 +20,7 @@
     "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-sass": "^5.2.0",
     "gatsby-plugin-styled-components": "^5.2.0",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gsap": "^3.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
