--- a/package.json
+++ b/package.json
@@ -1,40 +1,46 @@
 {
-  "name": "gatsby-starter-hello-world",
-  "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
-  "version": "0.1.0",
-  "license": "0BSD",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "dev-m": "gatsby develop -H 0.0.0.0 -p 8000",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "gatsby develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "dependencies": {
-    "babel-plugin-styled-components": "^1.13.3",
-    "gatsby": "^4.2.0",
-    "gatsby-plugin-react-svg": "^3.1.0",
-    "gatsby-plugin-sass": "^5.2.0",
-    "gatsby-plugin-styled-components": "^5.2.0",
-    "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gsap": "^3.8.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "sass": "^1.43.4",
-    "styled-components": "^5.3.3"
-  },
-  "devDependencies": {
-    "prettier": "^2.4.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+	"name": "gatsby-starter-hello-world",
+	"private": true,
+	"description": "A simplified bare-bones starter for Gatsby",
+	"version": "0.1.0",
+	"license": "0BSD",
+	"scripts": {
+		"build": "gatsby build",
+		"develop": "gatsby develop",
+		"dev-m": "gatsby develop -H 0.0.0.0 -p 8000",
+		"format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+		"start": "gatsby develop",
+		"serve": "gatsby serve",
+		"clean": "gatsby clean",
+		"test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+	},
+	"dependencies": {
+		"babel-plugin-styled-components": "^1.13.3",
+		"gatsby": "^4.2.0",
+		"gatsby-image": "^3.11.0",
+		"gatsby-plugin-react-svg": "^3.1.0",
+		"gatsby-plugin-sass": "^5.2.0",
+		"gatsby-plugin-sharp": "^4.4.0",
+		"gatsby-plugin-styled-components": "^5.2.0",
+		"gatsby-plugin-web-font-loader": "^1.0.4",
+		"gatsby-source-filesystem": "^4.4.0",
+		"gatsby-transformer-remark": "^5.4.0",
+		"gatsby-transformer-sharp": "^4.4.0",
+		"gsap": "^3.8.0",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
+		"sass": "^1.43.4",
+		"styled-components": "^5.3.3",
+		"util": "^0.12.4"
+	},
+	"devDependencies": {
+		"prettier": "^2.4.1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+	},
+	"bugs": {
+		"url": "https://github.com/gatsbyjs/gatsby/issues"
+	}
 }
