--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
 		"gatsby-plugin-sharp": "^4.4.0",
 		"gatsby-plugin-styled-components": "^5.2.0",
 		"gatsby-plugin-web-font-loader": "^1.0.4",
+		"gatsby-source-contentful": "^7.3.0",
 		"gatsby-source-filesystem": "^4.4.0",
+		"gatsby-transformer-json": "^4.4.0",
 		"gatsby-transformer-remark": "^5.4.0",
 		"gatsby-transformer-sharp": "^4.4.0",
 		"gsap": "^3.8.0",
