project content_text designed

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -53,28 +53,6 @@
     "slug": "project-3",
     "address": "Goldman Sachs Office#Mountain Park#Denver#L23 G123",
     "description": "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo",
-    "thumb": "./images/2.jpeg",
-    "featureImg": "./images/2.jpeg",
-    "project_images": [
-      "./images/1.jpeg",
-      "./images/2.jpeg",
-      "./images/3.jpeg",
-      "./images/4.jpeg",
-      "./images/5.jpeg",
-      "./images/6.jpeg",
-      "./images/7.jpeg"
-    ]
-  },
-  {
-    "title": "Project 2",
-    "client": "Goldman Saches",
-    "type": "Villa",
-    "area": 200000,
-    "year": "2020",
-    "Role": "Architecture & Interior Design",
-    "slug": "project-9",
-    "address": "Goldman Sachs Office#Mountain Park#Denver#L23 G123",
-    "description": "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo",
     "thumb": "./images/3.jpeg",
     "featureImg": "./images/3.jpeg",
     "project_images": [
@@ -112,7 +90,7 @@
   {
     "title": "Project 2",
     "client": "Goldman Saches",
-    "type": "Restrault",
+    "type": "Villa",
     "area": 200000,
     "year": "2020",
     "Role": "Architecture & Interior Design",
@@ -134,7 +112,7 @@
   {
     "title": "Project 2",
     "client": "Goldman Saches",
-    "type": "Hospital",
+    "type": "Restrault",
     "area": 200000,
     "year": "2020",
     "Role": "Architecture & Interior Design",
@@ -163,8 +141,30 @@
     "slug": "project-7",
     "address": "Goldman Sachs Office#Mountain Park#Denver#L23 G123",
     "description": "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo",
-    "thumb": "./images/2.jpeg",
-    "featureImg": "./images/2.jpeg",
+    "thumb": "./images/7.jpeg",
+    "featureImg": "./images/7.jpeg",
+    "project_images": [
+      "./images/1.jpeg",
+      "./images/2.jpeg",
+      "./images/3.jpeg",
+      "./images/4.jpeg",
+      "./images/5.jpeg",
+      "./images/6.jpeg",
+      "./images/7.jpeg"
+    ]
+  },
+  {
+    "title": "Project 2",
+    "client": "Goldman Saches",
+    "type": "Hospital",
+    "area": 200000,
+    "year": "2020",
+    "Role": "Architecture & Interior Design",
+    "slug": "project-8",
+    "address": "Goldman Sachs Office#Mountain Park#Denver#L23 G123",
+    "description": "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo",
+    "thumb": "./images/8.jpeg",
+    "featureImg": "./images/8.jpeg",
     "project_images": [
       "./images/1.jpeg",
       "./images/2.jpeg",
@@ -182,11 +182,55 @@
     "area": 200000,
     "year": "2020",
     "Role": "Architecture & Interior Design",
-    "slug": "project-8",
+    "slug": "project-9",
     "address": "Goldman Sachs Office#Mountain Park#Denver#L23 G123",
     "description": "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo",
-    "thumb": "./images/2.jpeg",
-    "featureImg": "./images/2.jpeg",
+    "thumb": "./images/9.jpeg",
+    "featureImg": "./images/9.jpeg",
+    "project_images": [
+      "./images/1.jpeg",
+      "./images/2.jpeg",
+      "./images/3.jpeg",
+      "./images/4.jpeg",
+      "./images/5.jpeg",
+      "./images/6.jpeg",
+      "./images/7.jpeg"
+    ]
+  },
+  {
+    "title": "Project 2",
+    "client": "Goldman Saches",
+    "type": "Office",
+    "area": 200000,
+    "year": "2020",
+    "Role": "Architecture & Interior Design",
+    "slug": "project-10",
+    "address": "Goldman Sachs Office#Mountain Park#Denver#L23 G123",
+    "description": "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo",
+    "thumb": "./images/10.jpeg",
+    "featureImg": "./images/10.jpeg",
+    "project_images": [
+      "./images/1.jpeg",
+      "./images/2.jpeg",
+      "./images/3.jpeg",
+      "./images/4.jpeg",
+      "./images/5.jpeg",
+      "./images/6.jpeg",
+      "./images/7.jpeg"
+    ]
+  },
+  {
+    "title": "Project 2",
+    "client": "Goldman Saches",
+    "type": "Office",
+    "area": 200000,
+    "year": "2020",
+    "Role": "Architecture & Interior Design",
+    "slug": "project-11",
+    "address": "Goldman Sachs Office#Mountain Park#Denver#L23 G123",
+    "description": "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo",
+    "thumb": "./images/11.jpeg",
+    "featureImg": "./images/11.jpeg",
     "project_images": [
       "./images/1.jpeg",
       "./images/2.jpeg",
